[package]
name = "bulletproofs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2curves = { git = "https://github.com/DanTehrani/halo2curves", branch = "secq256k1" }
poseidon-transcript = { path = "../poseidon-transcript" }
ff = "0.12.0"
multiexp = "0.3.1"
zeroize = { version = "1", default-features = false }
